--- a/ElReg/elreg_app/templates/podrazdelenie.html
+++ b/ElReg/elreg_app/templates/podrazdelenie.html
@@ -5,7 +5,7 @@
 
 <p>ЛПУ: {{ current_lpu.title }}</p>
 <p>Телефон: {{ current_lpu.phone }}</p>
-<p>E-Mail: {{ current_lpu.email }}</p>
+<p>Адрес электронной почты: {{ current_lpu.email }}</p>
 <p>
 <table class="commonTable">
     <tr>
