--- a/ElReg/elreg_app/templates/zapis.html
+++ b/ElReg/elreg_app/templates/zapis.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <table class="no_shadow_print">
-    <tr><th colspan="3">УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ ticketStatus.ticketUid }}</th></tr>
+    <tr><th colspan="3">УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ ticketUid }}</th></tr>
     <tr><td>ФИО (Пациент):</td><td colspan="2">{{ pacientName }}</td></tr>
     <tr><td>Дата рождения:</td><td colspan="2">{{ birthday }} г.</td></tr>
     <tr><td>Полис ОМС:</td><td colspan="2">{{ omiPolicyNumber }}</td></tr>
