Добавлена легенда к филдсету поиска

--- a/ElReg/elreg_app/templates/lpu.html
+++ b/ElReg/elreg_app/templates/lpu.html
@@ -5,6 +5,7 @@
 
 <form id="form" action="" method="post" name="frm">
     <fieldset>
+    <legend><strong>Поиск ЛПУ:</strong></legend>
         <div class="searchField">
             <input type="text" name="search" id="search_lpu" maxlength="100" size="100" placeholder="Наименование ЛПУ" onkeyup="searchLpu()" />
             <input type="text" name="search" id="search_gorod" maxlength="100" size="100" placeholder="Город" onkeyup="searchGorod()" />
