--- a/ElReg/elreg_app/templates/lpu.html
+++ b/ElReg/elreg_app/templates/lpu.html
@@ -6,10 +6,17 @@
 <form id="form" action="" method="post" name="frm">
     <fieldset>
     <legend><strong>Поиск ЛПУ:</strong></legend>
-        <div class="searchField">
-            <input type="text" name="search" id="search_lpu" maxlength="100" size="100" placeholder="Наименование ЛПУ" onkeyup="searchLpu()" />
-            <input type="text" name="search" id="search_gorod" maxlength="100" size="100" placeholder="Город" onkeyup="searchGorod()" />
-            <input type="text" name="search" id="search_rayon" maxlength="100" size="100" placeholder="Район" onkeyup="searchRayon()" />
+        <div class="field">
+            <label for="search_lpu">Наименование ЛПУ:</label>
+            <input type="text" name="search" id="search_lpu" maxlength="100" size="85" onkeyup="searchLpu()" />
+        <div class="field">
+        </div>
+            <label for="search_gorod">Город:</label>
+            <input type="text" name="search" id="search_gorod" maxlength="100" size="85" onkeyup="searchGorod()" />
+        <div class="field">
+        </div>
+            <label for="search_rayon">Район:</label>
+            <input type="text" name="search" id="search_rayon" maxlength="100" size="85" onkeyup="searchRayon()" />
         </div>
         <br />
         <table id="search_table" class="no_search">
