Переработан вывод кнопок в футере, убрана содержащая их таблица. Старые значения закомментированы

--- a/ElReg/elreg_app/templates/pacient.html
+++ b/ElReg/elreg_app/templates/pacient.html
@@ -78,21 +78,33 @@
 
     <input type="checkbox" id="confirm" name="confirm" value="confirm" />
     Я даю своё согласие на автоматизированную обработку указанной информации, распространяющейся на осуществление всех действий с ней, включая сбор, передачу по сетям связи общего назначения, накопление, хранение, обновление, изменение, использование, обезличивание, блокирование, уничтожение и обработку посредством внесения в электронную базу данных, систематизации, включения в списки и отчетные формы.
-    <br />
+    <br /><br />
 
-    <table class="footer_btn">
-        <tr>
-            <td>
-                <a href="{% url vremya %}" class="container">
-                    <img src="{{ STATIC_URL }}/static/images/back_btn.gif" alt="Назад">
-                </a>
-            </td>
-            <td>
-                <input type="submit" id="button-submit" style="width:102px;height:40px" class="sendsubmit" name="send" value="Подтвердить" disabled />
-                <input type=hidden name=ticket value="{{ ticket }}" />
-                <input type=hidden name=flag value=True />
-            </td>
-        </tr>
-    </table>
+{#    <table class="footer_btn">#}
+{#        <tr>#}
+{#            <td>#}
+{#                <a href="{% url vremya %}" class="container">#}
+{#                    <img src="{{ STATIC_URL }}/static/images/back_btn.gif" alt="Назад">#}
+{#                </a>#}
+{#            </td>#}
+{#            <td>#}
+{#                <input type="submit" id="button-submit" style="width:102px;height:40px" class="sendsubmit" name="send" value="Подтвердить" disabled />#}
+{#                <input type=hidden name=ticket value="{{ ticket }}" />#}
+{#                <input type=hidden name=flag value=True />#}
+{#            </td>#}
+{#        </tr>#}
+{#    </table>#}
+
+    <a href="{% url vremya %}" class="container">
+        <img src="{{ STATIC_URL }}/static/images/back_btn.gif" alt="Назад">
+    </a>
+
+    <input type="submit" id="button-submit" style="width:102px;height:40px;padding-top:25px;margin-left:760px" class="sendsubmit" name="send" value="Подтвердить" disabled />
+    <input type=hidden name=ticket value="{{ ticket }}" />
+    <input type=hidden name=flag value=True />
+
+
+
+
 </form>
 {% endblock %}
