Добавлены стили для кнопок на странице Запись. Изменены цвета таблицы расписания врачей

--- a/ElReg/elreg_app/static/css/ie-only.css
+++ b/ElReg/elreg_app/static/css/ie-only.css
@@ -40,6 +40,7 @@ a {
 
 input {
     border-radius: 5px; /* закругление углов для всех, кто понимает */
+    margin: 5px 0 5px 0;
 }
 
 fieldset {
@@ -127,11 +128,11 @@ fieldset div.searchField {
 }
 
 .legend li.free {
-    background-color: rgba(19, 255, 6, 0.27);
+    background-color: #baffad;
 }
 
 .legend li.locked {
-    background-color: rgba(255, 18, 8, 0.27);
+    background-color: #ffc8c1;
 }
 
 .legend li.not {
@@ -148,7 +149,7 @@ fieldset div.searchField {
     padding: 5px;
     width: 100%; /* Ширина таблицы */
     border-radius: 20px; /* закругление углов для всех, кто понимает */
-    box-shadow: 0 5px 7px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 7px #aeaeae;
 }
 
 .tabb table th {
@@ -169,11 +170,11 @@ fieldset div.searchField {
 }
 
 .tabb table td.locked, .tabb table td.locked:hover  {
-     background: rgba(255, 18, 8, 0.27);
+    background: #ffc8c1;
  }
 
 .tabb table td.free {
-    background: rgba(19, 255, 6, 0.27);
+    background: #baffad;
 }
 
 .tabb table td.free  button {
@@ -320,7 +321,7 @@ table.footer_btn {
 .field label {
     float: left;
     width: 200px;
-    margin-right: 10px;
+    margin: 5px 10px 5px 0;
     text-align: right;
     clear: left;
 }
@@ -373,6 +374,9 @@ table.footer_btn {
 
 .btnPrint {
     border: 0;
+    width:102px;
+    height:40px;
+    margin:0 382px 0 0;
     background: transparent url(../images/btn_print.gif) no-repeat left center;
     text-indent: -1000em;
     cursor: pointer;
@@ -381,6 +385,9 @@ table.footer_btn {
 
 .btnReady {
     border: 0;
+    width:102px;
+    height:40px;
+    margin:0 0 0 382px;
     background: transparent url(../images/btn_ready.gif) no-repeat left center;
     text-indent: -1000em;
     cursor: pointer;
