--- a/ElReg/elreg_app/templates/pacient.html
+++ b/ElReg/elreg_app/templates/pacient.html
@@ -6,9 +6,9 @@
 <div id="info">
 <fieldset>
 <legend><strong>Информация о записи:</strong></legend>
-<p>Лечебное учреждение: {{ current_lpu_title }}, {{ adress }}, телефон: {{ current_lpu_phone }}</p>
-<p>Специализация: {{ prof }}</p>
-<p>Врач: {{ docName }}</p>
+<p>Лечебное учреждение: {{ current_lpu_title }}, {{ address }}, телефон: {{ current_lpu_phone }}</p>
+<p>Специализация: {{ speciality }}</p>
+<p>Врач: {{ doctor }}</p>
 
 <p>Дата и время приёма: {{ date }} {{ start_time }} - {{ finish_time }}</p>
 </fieldset>
