--- a/ElReg/elreg_app/templates/podrazdelenie.html
+++ b/ElReg/elreg_app/templates/podrazdelenie.html
@@ -11,11 +11,11 @@
     <tr>
         <td>
             <table class="firstTable">
-                {% for podrazdelenie in podrazd_list %}
+                {% for subdivision in subdivision_list %}
                 <tr>
                     <td>
-                        <a id="{{ podrazdelenie.1.0 }}" class="spec">
-                            {{ podrazdelenie.0 }} ({{ podrazdelenie.1.1 }})
+                        <a id="{{ subdivision.1.0 }}" class="spec">
+                            {{ subdivision.0 }} ({{ subdivision.1.1 }})
                         </a>
                     </td>
                 </tr>
