--- a/ElReg/elreg_app/templates/zapis.html
+++ b/ElReg/elreg_app/templates/zapis.html
@@ -5,12 +5,12 @@
 
 <table class="no_shadow_print">
     <tr><th colspan="3">УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ ticketUid }}</th></tr>
-    <tr><td>ФИО (Пациент):</td><td colspan="2">{{ pacientName }}</td></tr>
+    <tr><td>ФИО (Пациент):</td><td colspan="2">{{ patientName }}</td></tr>
     <tr><td>Дата рождения:</td><td colspan="2">{{ birthday }} г.</td></tr>
     <tr><td>Полис ОМС:</td><td colspan="2">{{ omiPolicyNumber }}</td></tr>
     <tr><th colspan="3">ВЫ ЗАПИСАНЫ НА ПРИЕМ:</th></tr>
-    <tr><td>Лечебное учреждение:</td><td colspan="2">{{ current_lpu_title }}, {{ adress }}, телефон: {{ current_lpu_phone }}</td></tr>
-    <tr><td>Врач:</td><td colspan="2">{{ docName }} ({{ prof }})</td></tr>
+    <tr><td>Лечебное учреждение:</td><td colspan="2">{{ current_lpu_title }}, {{ address }}, телефон: {{ current_lpu_phone }}</td></tr>
+    <tr><td>Врач:</td><td colspan="2">{{ doctor }} ({{ speciality }})</td></tr>
     <tr><td>Дата и время приёма:</td><td colspan="2">{{ date }} {{ start_time }} - {{ finish_time }}</td></tr>
     <tr><th colspan="3">ВНИМАНИЕ:</th></tr>
     <tr><td colspan="3">В случае невозможности посещения врача в указанное время, пожалуйста, сообщите об этом лечебному учреждению по контактным данным, указанным в настоящем уведомлении.</td></tr>
