Исправлена ошибка кнопок перехода в расписании

--- a/ElReg/elreg_app/static/css/style.css
+++ b/ElReg/elreg_app/static/css/style.css
@@ -190,6 +190,7 @@ fieldset div.searchField {
     padding: 10px;
     font-size:13px;
     text-decoration:none;
+    display: block;
 }
 
 .tabb table td.locked, .tabb table td.locked:hover  {
