--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -14,6 +14,7 @@
         </title>
 
 		<script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery-1.8.2.min.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery-ui-1.9.1.custom.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery.placeholder.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}/static/js/updates.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}/static/js/patient_page.js"></script>
@@ -29,7 +30,7 @@
             table.no_shadow_print {box-shadow: none;}
             table.no_shadow_print tr td {font-size: 18px;}
         </style>
-
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/css/jquery-ui/humanity/jquery-ui-1.9.1.custom.min.css" />
 	</head>
 	
 	<body>
